<resources>
    <string name="app_name">Ticket Support</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login"><![CDATA[<- Login]]></string>
    <string name="register"><![CDATA[<- Register]]></string>
    <string name="title">Title</string>
    <string name="type">Type...</string>
    <string name="please_wait_for_answer_or_send_a_message">Please wait for answer or send a Message!</string>
    <string name="login_page">Login Page</string>
    <string name="new_version">New Version :</string>
    <string name="_1_1_1">1.1.1</string>
    <string name="download_link">Download Link</string>
    <string name="loading">Loading...</string>
    <string name="ticket_support">Ticket support</string>
    <string name="in_this_application_you_can_create_a_user_with_mobile_number_authentication_and_send_tickets_to_different_departments_and_receive_answers_also_you_can_chat_with_department_support_team_we_build_the_server_side_of_this_application_with_nodejs_mongodb_and_expressjs_framework_which_is_totally_open_source_and_you_can_see_it_n_ndon_t_hesitate_to_send_questions_and_suggests">In this application you can create a user with mobile number (Authentication) and send tickets to different departments and receive answers. also you can chat with department support team. We build the server side of this application with NodeJS, MongoDB and ExpressJS Framework Which is totally open source and you can see it. \n\nDon\'t hesitate to send Questions and Suggests</string>
    <string name="cancel">Cancel</string>
    <string name="version">version</string>
    <string name="send_email">Send Email</string>
    <string name="add_new_ticket">Add New Ticket</string>
    <string name="department">Department :</string>
    <string name="priority">Priority :</string>
    <string name="message">Message</string>
    <string name="edit_user_info">Edit User Info</string>
    <string name="name">Name:</string>
    <string name="saeed">saeed</string>
    <string name="number">Number:</string>
    <string name="_09386329293">09386329293</string>
    <string name="old_password">Old Password:</string>
    <string name="new_password">New Password:</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="code">Code</string>
    <string name="send_code">send code</string>
    <string name="password">Password</string>
    <string name="connecting_to_server">Connecting to Server ...</string>

    <string-array name="ticket_departments">
        <item>Customer service</item>
        <item>Sales department</item>
        <item>Technical support</item>
        <item>General manager</item>
    </string-array>

    <string-array name="ticket_priority">
        <item>Low</item>
        <item>Normal</item>
        <item>High</item>
        <item>Critical</item>
    </string-array>

    <string-array name="ticket_type">
        <item>Waiting</item>
        <item>Answered</item>
        <item>waiting for answer</item>
        <item>Completed</item>
    </string-array>

</resources>