<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E6FFFFFF"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.setting.EditUserFragment">

    <LinearLayout
        android:id="@+id/top_lay"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="24dp"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatTextView

            android:layout_weight="3"
            android:id="@+id/title_add_new"
            android:layout_width="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:text="@string/edit_user_info"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            app:backgroundTint="@color/red"
            android:layout_marginEnd="16dp"
            android:tint="@color/white"
            android:id="@+id/cancel_action"
            android:src="@drawable/ic_baseline_close_24"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            app:backgroundTint="@color/login_end"
            android:tint="@color/white"
            android:id="@+id/send_btn"
            android:src="@drawable/ic_baseline_check_24"/>



    </LinearLayout>


    <RelativeLayout
        android:layout_below="@id/top_lay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/name_lay"
            android:layout_width="match_parent"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:padding="8dp"
            android:orientation="horizontal"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textColor="@color/black"
                android:maxLength="8"
                android:layout_margin="16dp"
                android:textSize="18sp"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/user_name"
                android:layout_width="match_parent"
                android:elevation="4dp"
                android:layout_gravity="center_vertical"
                android:background="@drawable/edit_text"
                android:maxLength="14"
                android:text="@string/saeed"
                android:layout_marginEnd="16dp"
                android:padding="8dp"
                android:layout_height="wrap_content"/>


        </LinearLayout>


        <LinearLayout
            android:layout_below="@id/name_lay"
            android:layout_width="match_parent"
            android:layout_marginEnd="16dp"
            android:id="@+id/number_lay"
            android:layout_marginStart="16dp"
            android:padding="8dp"
            android:orientation="horizontal"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number"
                android:textColor="@color/black"
                android:layout_margin="16dp"
                android:textSize="18sp"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/user_number"
                android:layout_width="match_parent"
                android:elevation="4dp"
                android:layout_gravity="center_vertical"
                android:background="@drawable/edit_text"
                android:text="@string/_09386329293"
                android:maxLength="11"
                android:inputType="number"
                android:minEms="10"
                android:layout_marginEnd="16dp"
                android:padding="8dp"
                android:layout_height="wrap_content"/>


        </LinearLayout>

        <LinearLayout
            android:layout_below="@id/number_lay"
            android:layout_width="match_parent"
            android:layout_marginEnd="16dp"
            android:id="@+id/old_lay"
            android:layout_marginStart="16dp"
            android:padding="8dp"
            android:orientation="horizontal"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/old_password"
                android:textColor="@color/black"
                android:layout_margin="16dp"
                android:textSize="18sp"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/user_old_password"
                android:layout_width="match_parent"
                android:elevation="4dp"
                android:layout_gravity="center_vertical"
                android:background="@drawable/edit_text"
                android:inputType="textPassword"
                android:text=""
                android:layout_marginEnd="16dp"

                android:padding="8dp"
                android:layout_height="wrap_content"/>


        </LinearLayout>


        <LinearLayout
            android:layout_below="@id/old_lay"
            android:layout_width="match_parent"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:padding="8dp"
            android:orientation="horizontal"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_password"
                android:textColor="@color/black"
                android:layout_margin="16dp"
                android:textSize="18sp"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/user_new_password"
                android:layout_width="match_parent"
                android:elevation="4dp"
                android:layout_gravity="center_vertical"
                android:inputType="textPassword"
                android:maxLength="10"
                android:minEms="4"
                android:background="@drawable/edit_text"
                android:text=""
                android:layout_marginEnd="16dp"
                android:padding="8dp"
                android:layout_height="wrap_content"/>


        </LinearLayout>


    </RelativeLayout>






</RelativeLayout>